# rte-installbackendserver

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.rst  docker-rebuild.bat  install.ps1  install.sh  pyproject.toml  rte-installbackendserver.bat
.github/workflows/: build-and-deploy-to-production.yml  check-rst-documentation.yml  ci.yml  deployment-pipeline.yaml  pre-commit.yml
.packageit/: packageit.ini
docs/source/: api.rst  conf.py  index.rst
src/rte-installbackend/: InstallServer_bee-dev01.bat  InstallServer_bee-dev04.bat  InstallServer_s1.sh  installserver.py
src/rte-installbackendserver/: rte-installbackendserver.bat  rte-installbackendserver_s1.ini  rte-installbackendserver_s1.sh
src/rteinstallbackendserver/: rteinstallbackendserver.py  rteinstallbackendserver_s1.ini  rteinstallbackendserver_s1.sh
